# sparsdr

./: .gitignore  README.md
examples/: SparSDR_reconstruct_100MHz.grc  top_block.py
gr-sparsdr/: CMakeLists.txt
gr-sparsdr/apps/: CMakeLists.txt
gr-sparsdr/cmake/Modules/: gnuradio-sparsdrConfig.cmake  sparsdrConfig.cmake
gr-sparsdr/docs/: CMakeLists.txt  README.sparsdr
gr-sparsdr/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-sparsdr/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-sparsdr/docs/doxygen/other/: group_defs.dox
gr-sparsdr/grc/: CMakeLists.txt  sparsdr_combined_pluto_receiver.block.yml  sparsdr_combined_usrp_receiver.block.yml  sparsdr_compressing_pluto_source.block.yml  sparsdr_compressing_usrp_source.block.yml  sparsdr_reconstruct.block.yml  sparsdr_simple_combined_pluto_receiver.block.yml  sparsdr_simple_combined_usrp_receiver.block.yml
gr-sparsdr/include/: CMakeLists.txt  api.h  combined_pluto_receiver.h  combined_usrp_receiver.h  compressing_pluto_source.h  compressing_source.h  compressing_usrp_source.h  iio_device_source.h  reconstruct.h  simple_combined_pluto_receiver.h  simple_combined_usrp_receiver.h  swap_16.h
gr-sparsdr/include/gnuradio/sparsdr/: CMakeLists.txt  api.h  band_spec.h  band_spec_vector.h  combined_pluto_receiver.h  combined_usrp_receiver.h  compressing_pluto_source.h  compressing_source.h  compressing_usrp_source.h  iio_device_source.h  reconstruct.h  simple_combined_pluto_receiver.h  swap_16.h  (+1 more)
gr-sparsdr/lib/: CMakeLists.txt  combined_common.h  combined_pluto_receiver_impl.h  combined_usrp_receiver_impl.h  compressing_pluto_source_impl.cc  compressing_pluto_source_impl.h  compressing_source.cc  compressing_usrp_source_impl.h  fft_bin_calculator.c  iio_device_source_impl.h  reconstruct_impl.h  simple_combined_pluto_receiver_impl.cc  simple_combined_pluto_receiver_impl.h  simple_combined_usrp_receiver_impl.cc  simple_combined_usrp_receiver_impl.h  swap_16_impl.h  threshold_file.h
gr-sparsdr/python/: CMakeLists.txt  __init__.py
gr-sparsdr/python/bindings/: CMakeLists.txt  combined_pluto_receiver_python.cc  combined_usrp_receiver_python.cc  compressing_pluto_source_python.cc  compressing_usrp_source_python.cc  python_bindings.cc  reconstruct_python.cc  simple_combined_pluto_receiver_python.cc  simple_combined_usrp_receiver_python.cc
gr-sparsdr/python/bindings/docstrings/: combined_pluto_receiver_pydoc_template.h  combined_usrp_receiver_pydoc_template.h  compressing_pluto_source_pydoc_template.h  simple_combined_pluto_receiver_pydoc_template.h  simple_combined_usrp_receiver_pydoc_template.h
gr-sparsdr/python/sparsdr/bindings/: CMakeLists.txt  band_spec_python.cc  band_spec_vector_python.cc  combined_pluto_receiver_python.cc  combined_usrp_receiver_python.cc  compressing_pluto_source_python.cc  compressing_usrp_source_python.cc  failed_conversions.txt  header_utils.py  python_bindings.cc  reconstruct_python.cc  simple_combined_pluto_receiver_python.cc  simple_combined_usrp_receiver_python.cc
gr-sparsdr/python/sparsdr/bindings/docstrings/: band_spec_pydoc_template.h  band_spec_vector_pydoc_template.h  combined_usrp_receiver_pydoc_template.h  compressing_usrp_source_pydoc_template.h  reconstruct_pydoc_template.h
reconstruct/src/: lib.rs  main.rs
